docs/0.17/_sources/api/gammapy.datasets.SpectrumDatasetOnOff.rst.txt
SpectrumDatasetOnOff
====================

.. currentmodule:: gammapy.datasets

.. autoclass:: SpectrumDatasetOnOff
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumDatasetOnOff.alpha
      ~SpectrumDatasetOnOff.background
      ~SpectrumDatasetOnOff.data_shape
      ~SpectrumDatasetOnOff.energy_range
      ~SpectrumDatasetOnOff.evaluators
      ~SpectrumDatasetOnOff.excess
      ~SpectrumDatasetOnOff.exposure
      ~SpectrumDatasetOnOff.mask
      ~SpectrumDatasetOnOff.mask_safe
      ~SpectrumDatasetOnOff.models
      ~SpectrumDatasetOnOff.name
      ~SpectrumDatasetOnOff.stat_type
      ~SpectrumDatasetOnOff.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumDatasetOnOff.copy
      ~SpectrumDatasetOnOff.create
      ~SpectrumDatasetOnOff.fake
      ~SpectrumDatasetOnOff.from_dict
      ~SpectrumDatasetOnOff.from_ogip_files
      ~SpectrumDatasetOnOff.from_spectrum_dataset
      ~SpectrumDatasetOnOff.info_dict
      ~SpectrumDatasetOnOff.npred
      ~SpectrumDatasetOnOff.npred_sig
      ~SpectrumDatasetOnOff.peek
      ~SpectrumDatasetOnOff.plot_counts
      ~SpectrumDatasetOnOff.plot_fit
      ~SpectrumDatasetOnOff.plot_residuals
      ~SpectrumDatasetOnOff.read
      ~SpectrumDatasetOnOff.residuals
      ~SpectrumDatasetOnOff.stack
      ~SpectrumDatasetOnOff.stat_array
      ~SpectrumDatasetOnOff.stat_sum
      ~SpectrumDatasetOnOff.to_dict
      ~SpectrumDatasetOnOff.to_ogip_files
      ~SpectrumDatasetOnOff.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: background
   .. autoattribute:: data_shape
   .. autoattribute:: energy_range
   .. autoattribute:: evaluators
   .. autoattribute:: excess
   .. autoattribute:: exposure
   .. autoattribute:: mask
   .. autoattribute:: mask_safe
   .. autoattribute:: models
   .. autoattribute:: name
   .. autoattribute:: stat_type
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: fake
   .. automethod:: from_dict
   .. automethod:: from_ogip_files
   .. automethod:: from_spectrum_dataset
   .. automethod:: info_dict
   .. automethod:: npred
   .. automethod:: npred_sig
   .. automethod:: peek
   .. automethod:: plot_counts
   .. automethod:: plot_fit
   .. automethod:: plot_residuals
   .. automethod:: read
   .. automethod:: residuals
   .. automethod:: stack
   .. automethod:: stat_array
   .. automethod:: stat_sum
   .. automethod:: to_dict
   .. automethod:: to_ogip_files
   .. automethod:: write
